--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,16 +8,16 @@ environment:
 
 dependencies:
   crypto: ^3.0.1
-  http: ^0.13.4
+  http: ^1.2.1
   meta: ^1.7.0
-  uuid: ^3.0.6
-  simple_logger: 1.9.0
+  uuid: ^4.4.0
+  simple_logger: 1.9.0+3
   hive: 2.2.3
   get_it: ^7.6.0
 
 dev_dependencies:
-  lints: ^1.0.0
+  lints: ^4.0.0
   test: ^1.16.0
   mockito: ^5.1.0
   build_runner: ^2.1.7
-  nock: 1.1.3
+  nock: 1.2.3
